# clickhouse-1c-native

./: API.md  README.md
1C/: КликХаус.cfe
1C/src/: ConfigDumpInfo.xml  Configuration.xml
1C/src/CommonModules/: КХ_Данные.xml  КХ_ИнтеграцияСлужебный.xml  КХ_Мониторинг.xml  КХ_ЯдроПовИсп.xml
1C/src/CommonModules/КХ_Данные/Ext/: Module.bsl
1C/src/CommonModules/КХ_ИнтеграцияСлужебный/Ext/: Module.bsl
1C/src/CommonModules/КХ_Мониторинг/Ext/: Module.bsl
1C/src/CommonModules/КХ_ЯдроПовИсп/Ext/: Module.bsl
1C/src/CommonTemplates/: КХ_ВК.xml
1C/src/DataProcessors/: КХ_ДиагностикаИнтеграции.xml
1C/src/DataProcessors/КХ_ДиагностикаИнтеграции/Forms/: Форма.xml
1C/src/DataProcessors/КХ_ДиагностикаИнтеграции/Forms/Форма/Ext/: Form.xml
1C/src/DataProcessors/КХ_ДиагностикаИнтеграции/Forms/Форма/Ext/Form/: Module.bsl
1C/src/InformationRegisters/: КХ_НастройкиПодключения.xml
1C/src/Languages/: Русский.xml
1C/src/Subsystems/: КХ_КликХаус.xml
rust/: Cargo.toml  Makefile.toml  Manifest.xml
rust/src/: cache.rs  click_house_component.rs  lib.rs  metrics.rs  utils.rs
rust/test/: integration_test.rs
